Score each corpus survivor against the resident seed set (#108) (#121)
* Drop the per-item starting log line, keeping only the finished one

A starting line for every item doubled the per-item log volume from ADR-093
without telling an operator anything the finished line doesn't already cover.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Add gate 3 and a no-op scoring step for #107 slice 1 (ADR-084)

Names an embedding model as a fourth profile key and adds the gate that
reads it, wired into a new gated "embedding-scoring" step at the end of the
pipeline. Only the gate is built so far; re-chunking, the /api/embed call
and the scoring run itself are later slices of the same ticket.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Re-chunk each corpus survivor from the extraction cache once gate 3 opens (#107 slice 2, ADR-084)

Wires the already-built HybridChunker into EmbeddingScoringTasklet: once an
embedding model is named and stage 5's earlier gates are open, every corpus
survivor is re-chunked from its cached Docling response (zero Docling calls
on a cache hit) and its chunks land in chunk_cache. No ScoringRun or
/api/embed call yet -- that needs the embedder identity, which isn't
knowable until a real embed call reports it.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Embed each corpus survivor's chunks and mint the scoring run for #107 slice 3 (ADR-084, ADR-085)

Wires ChunkEmbedder into the embedding-scoring step: every chunk HybridChunker
produces is embedded under truncate: false and stored as a little-endian
float32 vector, keyed by chunk_cache's own key plus the composed embedder
identity. A ScoringRun is minted alongside the measurement run once gate 3
opens, giving stage 5 its second run row. A chunk the runtime rejects under
truncate: false is split in half and the halves' vectors averaged, rather
than silently truncated or left unembedded.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>

* Embed usable